--- a/animefilms/src/main/res/layout/anime_film_item.xml
+++ b/animefilms/src/main/res/layout/anime_film_item.xml
@@ -3,7 +3,7 @@
 
     <data>
         <variable
-                name="name"
+                name="film"
                 type="ru.gruzdev.common.network.data.AnimeFilm"/>
 
     </data>
@@ -12,11 +12,49 @@
     <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="@{name.title}"/>
+        <androidx.cardview.widget.CardView
+                android:layout_margin="8dp"
+
+                android:layout_width="match_parent"
+                android:layout_height="150dp">
+            <RelativeLayout
+                    android:background="#B6B6B6"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_alignParentStart="true"
+                        android:textSize="16sp"
+                        android:text="@{film.title}"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_alignParentBottom="true"
+                        android:textSize="16sp"
+                        android:text="@{film.releaseDate}"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="16dp"
+                        android:textSize="16sp"
+                        android:text="@{film.id}"/>
+
+            </RelativeLayout>
+
+        </androidx.cardview.widget.CardView>
+        <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textSize="16sp"-->
+                <!--android:text="@{film.title}"/>-->
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
